# Heimdall

./: .gitignore  README.md
client/: CMakeLists.txt
client/include/: alert.h  daemonize.h  daemonize_control.h  hashing.h  logging.h
client/src/: daemonize.c  daemonize_control.c  main.c
include/: config.h  parser.h  utils.h
server/: CMakeLists.txt
server/include/: database.h  fsm.h  logging.h
server/src/: command_line.c  database.c  logging.c  main.c
src/: hashing.c  logging.c  parser.c  utils.c
system/: heimdall.service
